# PPT_Agent_Rust

./: .gitignore  AGENTS.md  AGENTS.me  Cargo.toml  README.md  execution_plan.md  init.md  marker_analysis.md
crates/pdf_agent_app/: Cargo.toml
crates/pdf_agent_app/src/: app.rs  main.rs  message.rs  theme.rs  update_handler.rs
crates/pdf_agent_app/src/commands/: conversion_commands.rs  file_commands.rs  llm_commands.rs  mod.rs  settings_commands.rs
crates/pdf_agent_app/src/components/: feedback_box.rs  mod.rs  progress_view.rs  status_bar.rs  toolbar.rs
crates/pdf_agent_app/src/panes/: diff_pane.rs  markdown_pane.rs  mod.rs  pdf_pane.rs
crates/pdf_agent_app/src/screens/: main_tab.rs  mod.rs  settings_tab.rs
crates/pdf_agent_app/src/state/: app_state.rs  main_state.rs  mod.rs
crates/pdf_agent_app/src/subscriptions/: job_events.rs  mod.rs
crates/pdf_agent_cli/: Cargo.toml
crates/pdf_agent_cli/src/: main.rs
crates/pdf_agent_core/: Cargo.toml
crates/pdf_agent_core/src/: error.rs  lib.rs
crates/pdf_agent_core/src/builders/: document_builder.rs  mod.rs
crates/pdf_agent_core/src/config/: mod.rs
crates/pdf_agent_core/src/context/: mod.rs  pipeline_context.rs  service_registry.rs
crates/pdf_agent_core/src/pipeline/: cancel_token.rs  converter.rs  job_event.rs  mod.rs  stage.rs
crates/pdf_agent_core/src/processors/: block_relabel_processor.rs  debug_processor.rs  equation_processor.rs  heading_processor.rs  line_merge_processor.rs  list_processor.rs  llm_simple_meta_processor.rs  mod.rs  order_processor.rs  table_merge_processor.rs  table_processor.rs  toc_processor.rs  traits.rs
crates/pdf_agent_core/src/providers/: mod.rs  traits.rs
crates/pdf_agent_core/src/renderers/: html_renderer.rs  json_renderer.rs  markdown_renderer.rs  mod.rs  traits.rs
crates/pdf_agent_core/src/runtime/: job_manager.rs  mod.rs
crates/pdf_agent_core/src/schema/: bbox.rs  block.rs  block_type.rs  char.rs  document.rs  line.rs  mod.rs  page.rs  span.rs
crates/pdf_agent_inference/: Cargo.toml
crates/pdf_agent_inference/src/: lib.rs
crates/pdf_agent_inference/src/predictors/: layout_predictor.rs  mod.rs  ocr_predictor.rs
crates/pdf_agent_llm/: Cargo.toml
crates/pdf_agent_llm/src/: lib.rs  service.rs
crates/pdf_agent_llm/src/rate_limit/: token_bucket.rs
crates/pdf_agent_pdf/: Cargo.toml
crates/pdf_agent_pdf/src/: coordinates.rs  error.rs  lib.rs  native_text.rs  page_render.rs  pdf_provider.rs  pdfium_backend.rs
crates/pdf_agent_storage/: Cargo.toml
crates/pdf_agent_storage/src/: db.rs  error.rs  keyring_store.rs  lib.rs
crates/pdf_agent_storage/src/repositories/: document_repository.rs  job_repository.rs  mod.rs
docs/: api-contracts.md  architecture.md  client-detailed-design.md  data-model.md  pipeline.md  roadmap.md  ui-interaction-spec.md
models/: README.md
