[workspace]
resolver = "2"
members = [
    "crates/pdf_agent_app",
    "crates/pdf_agent_core",
    "crates/pdf_agent_pdf",
    "crates/pdf_agent_inference",
    "crates/pdf_agent_llm",
    "crates/pdf_agent_storage",
    "crates/pdf_agent_cli",
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
lopdf = "0.31"
rusqlite = { version = "0.31", features = ["bundled"] }
keyring = "2.1"
clap = { version = "4.4", features = ["derive"] }
rfd = "0.14"
iced = { version = "0.12", features = ["canvas", "tokio", "advanced", "image"] }
similar = "2.4"
async-stream = "0.3"
pdfium-render = "0.8"
image = "0.24"
opener = "0.7"

