[package]
name = "pdf_agent_llm"
version = "0.1.0"
edition = "2021"

[dependencies]
pdf_agent_core = { path = "../pdf_agent_core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }


