[package]
name = "pdf_agent_storage"
version = "0.1.0"
edition = "2021"

[dependencies]
pdf_agent_core = { path = "../pdf_agent_core" }
rusqlite = { workspace = true }
keyring = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }


